<resources>
    <string name="app_name">Fisher</string>
    <string name="click_here_to_reset" />
    <string name="register" />
    <string name="enter_your_full_name">enter your full name</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)*</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="sign_up">Sign-up</string>
    <string name="please_register_yourself_to_continue_with_the_amazing_experience">Please register yourself to continue with the amazing experience!</string>
    <string name="profile">profile</string>
    <string name="full_name">Full Name*</string>
    <string name="email">Email*</string>
    <string name="select_your_dob">select your dob</string>
    <string name="user_display_picture" />
    <string name="name" />
    <string name="loading" />
    <string name="dob" />
    <string name="gender" />
    <string name="mobile" />
    <string name="registered_user_since" />
    <string name="upload_your_profile_pic">Upload your profile pic</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="imageview_to_display_pic">ImageView to Display Pic</string>
    <string name="upload">Upload</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="you_can_update_your_profile_to_stay_up_to_date">You can update your profile to stay up to date!</string>
    <string name="current_email">Current Email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="password">Password*</string>
    <string name="authenticate">Authenticate</string>
    <string name="enter_your_new_email_address">enter your new email address</string>
    <string name="update_email">Update Email</string>
    <string name="your_profile_is_not_authenticated_yet">Your profile is not Authenticated yet!</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_your_mobile_no_without_91">enter your mobile no. (without +91)</string>
    <string name="i_agree_with_the_terms_of_service_and_privacy_policy">I agree with the Terms of Service and Privacy Policy</string>
    <string name="welcome_nto_nandroid_firebase_app">Welcome\nto\nAndroid Firebase App</string>
    <string name="tanztalks_tech">Welcome</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="update_email_u" />
    <string name="upload_pic_u" />
</resources>