<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/border"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:maxWidth="180dp"
            app:srcCompat="@drawable/ic_logo_transparent"
            android:contentDescription="@string/welcome_nto_nandroid_firebase_app" />

        <TextView
            android:id="@+id/textView_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_logo"
            android:text="@string/tanztalks_tech"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textView_main_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_app_name"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_nto_nandroid_firebase_app"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_main_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_marginTop="30dp"
            android:text="@string/do_not_have_an_account"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView_register_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_register"
            android:text="@string/register"
            android:textColor="@color/purple_700"
            android:textAlignment="center" />

    </RelativeLayout>

</RelativeLayout>